# pyprolog

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_INTERACTIVE.md  cline_available_tools.json  diff_original.bat  pyproject.toml  requirements.txt  roo_available_tools.json  setup.py  temp_interactive_io_block.md  test_import.py
.cursor/rules/: base-rule.md
config/logging/: debug.conf  production.conf  test.conf
docs/: development_commands.md  dive_deep_into_pyprolog_issues_and_improvements.md  prolog_interactive_io_design.md  prolog_library_guide.md  pyprolog_implemented_features_and_predicates.md  pyprolog_issues_and_improvements.md  pyprolog_実装済み機能・述語リスト.md  remaining_features_spec_schedule.md  unresolved_pyprolog_interpreter_issue_analysis.md  リファクタリング概要設計.md
docs/20250523/: 改修概要設計書.md  詳細設計書_インタープリタ_カット処理.md  詳細設計書_インタープリタ_ルール適用とバックトラック.md  詳細設計書_インタープリタ_動的DB操作.md  詳細設計書_インタープリタ_単一化処理.md  詳細設計書_インタープリタ_比較演算評価.md  詳細設計書_インタープリタ_算術式評価.md  詳細設計書_パーサー_比較演算子.md  詳細設計書_パーサー_算術式.md  詳細設計書_パーサー_結合処理確認.md  詳細設計書_リスト表現の整合性.md  詳細設計書_対応順序.md  詳細設計書のレビュー結果.md
docs/20250527_演算子共通化関連/: Prologインタープリターエラー修正設計書.md  interpreter_backup.py  operator_integration_design_update.md  prolog_detailed_fix_guide.md  prolog_detailed_fix_guide_phase0_completed.md  prolog_test_design.md  スリム化.md
docs/20250607/: Japanese_Variable_Support_Enhancement_Design_Document.md  japanesetest_results_report.md
docs/readme/: README.md  prolog_api_guide.md  prolog_implementation_overview.md  prolog_limitations_and_errors.md  prolog_predicates_reference.md
docs/tool/: ruff.md  uv.md
prolog/: __init__.py  binding_environment.py  builtins.py  core_types.py  errors.py  interpreter.py  math_interpreter.py  merge_bindings.py  parser.py  scanner.py  token_type.py  types.py
prolog/cli/: __init__.py  interactive_repl.py  prolog.py  repl.py  simple_interactive.py
prolog/core/: __init__.py  binding_environment.py  merge_bindings.py  operators.py  types.py
prolog/parser/: __init__.py  expression.py  parser.py  scanner.py  token_type.py  types.py
prolog/runtime/: __init__.py  builtins.py  interpreter.py  io_manager.py  io_streams.py  logic_interpreter.py  math_interpreter.py
prolog/util/: __init__.py  logger.py  logging_config.py
pyprolog/: __init__.py
pyprolog/cli/: __init__.py  interactive_repl.py  prolog.py  repl.py  simple_interactive.py
pyprolog/core/: __init__.py  binding_environment.py  errors.py  merge_bindings.py  operators.py
pyprolog/parser/: __init__.py  parser.py  scanner.py  token_type.py  types.py
pyprolog/runtime/: __init__.py  builtins.py  enhanced_runtime.py  interpreter.py  io_manager.py  io_streams.py  list_builtins.py  logic_interpreter.py  math_interpreter.py
pyprolog/tests/: __init__.py  test_runtime_integration.py  test_scanner_parser.py  test_variable_mapper.py
pyprolog/util/: __init__.py  logger.py  logging_config.py  variable_mapper.py
sample_usage/: README.md  arithmetic_sample.py  basic_usage.py  dynamic_rules_sample.py  family.pl  file_loading_sample.py  integrated_demo.py  io_sample.py  logging_config_demo.py  math_rules.pl  utility.py
tests/: conftest.py  test_core_improvements.py  test_list.py  test_predicate_functions.py
tests/core/: test_binding_environment.py  test_merge_bindings.py  test_operators.py  test_types.py  test_variable_dereferencing.py
tests/data/: medical_diagnosis_kb_japanese.pl
tests/parser/: test_parser.py  (+1 more)
(+72 files in other folders)
