[project]
name = "pyprolog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "prompt-toolkit>=3.0.51",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "setuptools>=80.4.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
    "ruff>=0.11.9",
]
